--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 		<input type="submit" value="submit">
     </form>
 </nav>
-<section class="cart"><a href="file:///C:/Users/Dell/Desktop/my%20own%20webpage/codes/1.htnl.html">Click Here(enhanced details)</a></section>
+<section class="cart"><a href="1.htnl.html">Click Here(enhanced details)</a></section>
 
 <footer>
 	<p>For more details </p>
